# SPEX

./: pyproject.toml
src/playlist_exporter/: api_client.py  exporter.py  formatter.py  main.py
src/spex/: ApiClient.py  api_client.py  exporter.py  main.py
src/spex/web/: api.py  server.py
tests/data/: api_artist.json  api_playlist.json  api_track.json  client_playlist.json  formatter_playlist.csv
