[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spex"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name = "Miles Hoar-Hewitt", email = "meles784@gmail.com"}]
requires-python = ">=3.13.7"

dependencies = [
    "pandas",
    "requests",
    "dotenv"
]

[tool.setuptools]
package-dir = {""="src"}

[tool.setuptools.packages.find]
where = ["src"]